Fix responsiveness on iphone

--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -10,14 +10,33 @@
     margin-bottom: 1rem;
     cursor: pointer;
     font-size: 1rem;
+    gap: 1rem;
 }
+
+.todo-text {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    text-align: left;
+  }
+
+  .todo-text p {
+    margin: 0;
+    word-break: break-word;
+    white-space: normal;
+    text-align: left;
+    width: 100%;
+  }
 
 .editIcon {
     margin-right: 0.75rem;
 }
 
 .icons {
+    flex-shrink: 0;
     color: var(--on-primary);
+    display: flex;
+    align-items: center;
 }
 
 .completed {
